Enhanced Performance with JVM switches